test/files/semantic/reject/var_redef_global_to_class.neo
let x: int = 10

class A
    let x: float = 1.0
end
